# Pickfair-nogui

./: .gitignore  AGENTS.md  AUDIT_RUNTIME_CTO_PHASE0.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  auto_throttle.py  betfair_client (1).py  betfair_client.py  circuit_breaker.py  conftest.py  database (3).py  database.py  database_schema.py  dutching.py  dutching_cache.py  dutching_state.py  event_bus (1).py  event_bus.py  executor_manager.py  headless_main.py  headless_ui_stubs.py  main.py  market_tracker.py  market_validator.py  mini_gui.py  order_manager.py  pnl_engine.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements-test.txt  requirements.txt  safe_mode.py  safe_mode_manager.py  safety_logger.py  (+12 more)
.guardrails/: allowed_scope.json
ai/: ai_guardrail (1).py  ai_pattern_engine.py  wom_engine.py
controllers/: __init__.py  dutching_controller.py  telegram_controller.py
core/: Table_manager.py  asinc_db_writer.py  async_db_writer.py  batch_lock_manager.py  duplication_guard.py  dutching_batch_manager.py  event_bus (2).py  event_bus.py  execution_guard.py  fast_analytics.py  market_tracker (1).py  market_tracker.py  money_management.py  order_router.py  perf_counters.py  pnl_engine.py  position_ledger.py  reconciliation_engine.py  reconciliation_types.py  risk_desk.py  risk_middleware.py  runtime_controller.py  safety_layer.py  secret_cipher.py  session_manager.py  simulation_matching_engine.py  simulation_order_book.py  simulation_state.py  state_recovery.py  system_state.py  table_manager.py  (+6 more)
(+583 files in other folders)
