[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickfair"
version = "0.1.0"
description = "Automated sports-betting trading system for the Betfair exchange"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "betfairlightweight>=2.20.0",
    "telethon>=1.34.0",
    "aiohttp>=3.9.0",
    "async-timeout>=4.0.3",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "colorlog>=6.7.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]
dev = ["pickfair[test]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "services*", "observability*", "ai*", "controllers*"]

[tool.pytest.ini_options]
# pytest.ini is authoritative; this section is a mirror for tools that
# only read pyproject.toml
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
